finished jwt auth
