# app/Http/routes.php
@@ -13,3 +13,6 @@ $app->post('api/oauth/access_token', ['as' => 'oauth.access_token', 'uses' => 'O
 $app->get('api/oauth/me', ['as' => 'oauth.owner', 'uses' => 'OAuthController@owner']);
 $app->get('api/oauth/authorize', ['as' => 'oauth.authorize.get', 'uses' => 'OAuthController@authorize']);
 $app->post('api/oauth/authorize', ['as' => 'oauth.authorize.post', 'uses' => 'OAuthController@issueAuthorize']);
+
+// JWT Auth
+$app->post('api/auth/login', 'AuthController@postLogin');
